@@ -7,6 +7,8 @@ JasperReports 0.6.3
 - new <box> tag available for putting border around text and image elements
 with independent properties such as color, style and padding on all four sides;
 
+- new "isFloatColumnFooter" attribute;
+
 - minor bug fixes and improvements;
 
 
